fix header dimensions and avoid overlap with hamburger menu

--- a/src/app/shared/components/header/header.component.css
+++ b/src/app/shared/components/header/header.component.css
@@ -2,13 +2,12 @@
     flex: 1 1 auto;
 }
 
-.container {
-    width: 100%;
-    height: 100%;
-    display: contents;
+.my-drawer-container {
+    height: 90vh;
 }
 
 .sidenav {
     padding: 1rem;
     width: 10rem;
+    height: 100%;
 }
